Updated Readme with OWL to VOWL JSON Conversion Guide